# XRF_copilot

./: .env.example  .gitignore  Atomic_number.py  README.md  anl_client.py  environment.yml  examine_simulation.ipynb  forward_model.py  launcher.py  misc.py  pyproject.toml  requirements.txt  simulate_xrf_maps_Panpan.py  simulation.py  test_fl_correction.py  test_fl_gpu_only.py  test_panpan_recon.py  test_simulate_xrf_maps.py  test_variable_names.py  util.py  workflow.py  xrf_copilot.py
.chainlit/: config.toml
nodes/: __init__.py  conversation_summarizer.py  formatter.py  recommender.py  states.py  survey.py  updater.py  utils.py
public/: hide-watermark.js  theme.json
public/elements/: DataDisplay.jsx
src/di_recon/: __init__.py  di_reconstruction.py
src/fl_correction/: FL_correction_core.py  FL_correction_torch.py  __init__.py  image_util.py  misc.py  numba_util.py  util.py
src/nicegui_app/: api_client.py  config.py  main.py  state.py
src/nicegui_app/components/: bnl_mask_diagram.py  chat_assistant.py  control_panel.py  detector_diagram.py  di_control_panel.py  di_parameter_form.py  file_browser.py  fl_control_panel.py  fl_parameter_form.py  fl_results_gallery.py  h5_inspector.py  parameter_form.py  progress_display.py  recon_control_panel.py  recon_parameter_form.py  result_viewer.py  (+4 more)
src/reconstruction/: XRF_tomography.py  __init__.py  forward_model.py  standard_calibration.py  util.py
src/services/: di_worker.py  fl_worker.py  main.py  models.py  queue_handlers.py  recon_worker.py  session_manager.py  worker.py
src/simulation/: __init__.py  forward_model.py  simulation.py  util.py
(+31 files in other folders)
